postgres.c3


/* Accessor functions for PGconn objects */
extern fn char *PQdb(PGconn *conn) @extern("PQdb");
extern fn char *PQuser(PGconn *conn) @extern("PQuser");
extern fn char *PQpass(PGconn *conn) @extern("PQpass");
extern fn char *PQhost(PGconn *conn) @extern("PQhost");
extern fn char *PQhostaddr(PGconn *conn) @extern("PQhostaddr");
extern fn char *PQport(PGconn *conn) @extern("PQport");
extern fn char *PQtty(PGconn *conn) @extern("PQtty");
extern fn char *PQoptions(PGconn *conn) @extern("PQoptions");
extern fn ConnStatusType PQstatus(PGconn *conn) @extern("PQstatus");
extern fn PGTransactionStatusType PQtransactionStatus(PGconn *conn) @extern("PQtransactionStatus");
extern fn char *PQparameterStatus(PGconn *conn, char *paramName) @extern("PQparameterStatus");
extern fn int	PQprotocolVersion(PGconn *conn) @extern("PQprotocolVersion");
extern fn int	PQserverVersion(PGconn *conn) @extern("PQserverVersion");
extern fn char *PQerrorMessage(PGconn *conn) @extern("PQerrorMessage");
extern fn int	PQsocket(PGconn *conn) @extern("PQsocket");
extern fn int	PQbackendPID(PGconn *conn) @extern("PQbackendPID");
extern fn PGpipelineStatus PQpipelineStatus(PGconn *conn) @extern("PQpipelineStatus");
extern fn int	PQconnectionNeedsPassword(PGconn *conn) @extern("PQconnectionNeedsPassword");
extern fn int	PQconnectionUsedPassword(PGconn *conn) @extern("PQconnectionUsedPassword");
extern fn int	PQconnectionUsedGSSAPI(PGconn *conn) @extern("PQconnectionUsedGSSAPI");
extern fn int	PQclientEncoding(PGconn *conn) @extern("PQclientEncoding");
extern fn int	PQsetClientEncoding(PGconn *conn, char *encoding) @extern("PQsetClientEncoding");

/* SSL information functions */
extern fn int	PQsslInUse(PGconn *conn) @extern("PQsslInUse");
extern fn void *PQsslStruct(PGconn *conn, char *struct_name) @extern("PQsslStruct");
extern fn char *PQsslAttribute(PGconn *conn, char *attribute_name) @extern("PQsslAttribute");
extern fn char *PQsslAttributeNames(PGconn *conn) @extern("PQsslAttributeNames");

/* Get the OpenSSL structure associated with a connection. Returns NULL for
 * unencrypted connections or if any other TLS library is in use. */
extern fn void *PQgetssl(PGconn *conn) @extern("PQgetssl");

/* Tell libpq whether it needs to initialize OpenSSL */
extern fn void PQinitSSL(int do_init) @extern("PQinitSSL");

/* More detailed way to tell libpq whether it needs to initialize OpenSSL */
extern fn void PQinitOpenSSL(int do_ssl, int do_crypto) @extern("PQinitOpenSSL");

/* Return true if GSSAPI encryption is in use */
extern fn int	PQgssEncInUse(PGconn *conn) @extern("PQgssEncInUse");

/* Returns GSSAPI context if GSSAPI is in use */
extern fn void *PQgetgssctx(PGconn *conn) @extern("PQgetgssctx");

/* Set verbosity for PQerrorMessage and PQresultErrorMessage */
extern fn PGVerbosity PQsetErrorVerbosity(PGconn *conn, PGVerbosity verbosity) @extern("PQsetErrorVerbosity");

/* Set CONTEXT visibility for PQerrorMessage and PQresultErrorMessage */
extern fn PGContextVisibility PQsetErrorContextVisibility(PGconn *conn, PGContextVisibility show_context) @extern("PQsetErrorContextVisibility");

/* Override default notice handling routines */
extern fn PQnoticeReceiver PQsetNoticeReceiver(PGconn *conn, PQnoticeReceiver proc, void *arg) @extern("PQsetNoticeReceiver");
extern fn PQnoticeProcessor PQsetNoticeProcessor(PGconn *conn, PQnoticeProcessor proc, void *arg) @extern("PQsetNoticeProcessor");

/*
 *	   Used to set callback that prevents concurrent access to
 *	   non-thread safe functions that libpq needs.
 *	   The default implementation uses a libpq internal mutex.
 *	   Only required for multithreaded apps that use kerberos
 *	   both within their app and for postgresql connections.
 */
def PGthreadlock_t = fn void (int acquire);

extern fn PGthreadlock_t PQregisterThreadLock(PGthreadlock_t newhandler) @extern("PQregisterThreadLock");

/* === in fe-trace.c === */
extern fn void PQtrace(PGconn *conn, FILE *debug_port) @extern("PQtrace");
extern fn void PQuntrace(PGconn *conn) @extern("PQuntrace");

/* flags controlling trace output: */
/* omit timestamps from each line */
const int PQTRACE_SUPPRESS_TIMESTAMPS = (1<<0);
/* redact portions of some messages, for testing frameworks */
const int PQTRACE_REGRESS_MODE = (1<<1);
extern fn void PQsetTraceFlags(PGconn *conn, int flags) @extern("PQsetTraceFlags");

/* === in fe-exec.c === */

/* Simple synchronous query */
extern fn PGresult *PQexec(PGconn *conn, char *query) @extern("PQexec");
extern fn PGresult *PQexecParams(PGconn *conn, char *command, int nParams, Oid *paramTypes, char **paramValues, int *paramLengths, int *paramFormats, int resultFormat) @extern("PQexecParams");
extern fn PGresult *PQprepare(PGconn *conn, char *stmtName, char *query, int nParams, Oid *paramTypes) @extern("PQprepare");
extern fn PGresult *PQexecPrepared(PGconn *conn, char *stmtName, int nParams, char **paramValues, int *paramLengths, int *paramFormats, int resultFormat) @extern("PQexecPrepared");

/* Interface for multiple-result or asynchronous queries */
const int PQ_QUERY_PARAM_MAX_LIMIT = 65535;

extern fn int	PQsendQuery(PGconn *conn, char *query) @extern("PQsendQuery");
extern fn int	PQsendQueryParams(PGconn *conn, char *command, int nParams, Oid *paramTypes, char **paramValues, int *paramLengths, int *paramFormats, int resultFormat) @extern("PQsendQueryParams");
extern fn int	PQsendPrepare(PGconn *conn, char *stmtName, char *query, int nParams, Oid *paramTypes) @extern("PQsendPrepare");
extern fn int	PQsendQueryPrepared(PGconn *conn, char *stmtName, int nParams, char **paramValues, int *paramLengths, int *paramFormats, int resultFormat) @extern("PQsendQueryPrepared");
extern fn int	PQsetSingleRowMode(PGconn *conn) @extern("PQsetSingleRowMode");
extern fn PGresult *PQgetResult(PGconn *conn) @extern("PQgetResult");

/* Routines for managing an asynchronous query */
extern fn int	PQisBusy(PGconn *conn) @extern("PQisBusy");
extern fn int	PQconsumeInput(PGconn *conn) @extern("PQconsumeInput");

/* Routines for pipeline mode management */
extern fn int	PQenterPipelineMode(PGconn *conn) @extern("PQenterPipelineMode");
extern fn int	PQexitPipelineMode(PGconn *conn) @extern("PQexitPipelineMode");
extern fn int	PQpipelineSync(PGconn *conn) @extern("PQpipelineSync");
extern fn int	PQsendFlushRequest(PGconn *conn) @extern("PQsendFlushRequest");

/* LISTEN/NOTIFY support */
extern fn PGnotify *PQnotifies(PGconn *conn) @extern("PQnotifies");

/* Routines for copy in/out */
extern fn int	PQputCopyData(PGconn *conn, char *buffer, int nbytes) @extern("PQputCopyData");
extern fn int	PQputCopyEnd(PGconn *conn, char *errormsg) @extern("PQputCopyEnd");
extern fn int	(PGconn *conn, char **buffer, int async)
@externPQgetCopyData("PQgetCopyData");

/* Deprecated routines for copy in/out */
extern fn int	PQgetline(PGconn *conn, char *buffer, int length) @extern("PQgetline");
extern fn int	PQputline(PGconn *conn, char *string) @extern("PQputline");
extern fn int	PQgetlineAsync(PGconn *conn, char *buffer, int bufsize) @extern("PQgetlineAsync");
extern fn int	PQputnbytes(PGconn *conn, char *buffer, int nbytes) @extern("PQputnbytes");
extern fn int	PQendcopy(PGconn *conn) @extern("PQendcopy");

/* Set blocking/nonblocking connection to the backend */
extern fn int	PQsetnonblocking(PGconn *conn, int arg) @extern("PQsetnonblocking");
extern fn int	PQisnonblocking(PGconn *conn) @extern("PQisnonblocking");
extern fn int	PQisthreadsafe(void) @extern("PQisthreadsafe");
extern fn PGPing PQping(char *conninfo) @extern("PQping");
extern fn PGPing PQpingParams(char **keywords, char **values, int expand_dbname) @extern("PQpingParams");

/* Force the write buffer to be written (or at least try) */
extern fn int	PQflush(PGconn *conn) @extern("PQflush");

/*
 * "Fast path" interface --- not really recommended for application
 * use
 */
extern fn PGresult *PQfn(PGconn *conn, int fnid, int *result_buf, int *result_len, int result_is_int, PQArgBlock *args, int nargs) @extern("PQfn");

/* Accessor functions for PGresult objects */
extern fn ExecStatusType PQresultStatus(PGresult *res) @extern("PQresultStatus");
extern fn char *PQresStatus(ExecStatusType status) @extern("PQresStatus");
extern fn char *PQresultErrorMessage(PGresult *res) @extern("PQresultErrorMessage");
extern fn char *PQresultVerboseErrorMessage(PGresult *res, PGVerbosity verbosity, PGContextVisibility show_context) @extern("PQresultVerboseErrorMessage");
extern fn char *PQresultErrorField(PGresult *res, int fieldcode) @extern("PQresultErrorField");
extern fn int	PQntuples(PGresult *res) @extern("PQntuples");
extern fn int	PQnfields(PGresult *res) @extern("PQnfields");
extern fn int	PQbinaryTuples(PGresult *res) @extern("PQbinaryTuples");
extern fn char *PQfname(PGresult *res, int field_num) @extern("PQfname");
extern fn int	PQfnumber(PGresult *res, char *field_name) @extern("PQfnumber");
extern fn Oid	PQftable(PGresult *res, int field_num) @extern("PQftable");
extern fn int	PQftablecol(PGresult *res, int field_num) @extern("PQftablecol");
extern fn int	PQfformat(PGresult *res, int field_num) @extern("PQfformat");
extern fn Oid	PQftype(PGresult *res, int field_num) @extern("PQftype");
extern fn int	PQfsize(PGresult *res, int field_num) @extern("PQfsize");
extern fn int	PQfmod(PGresult *res, int field_num) @extern("PQfmod");
extern fn char *PQcmdStatus(PGresult *res) @extern("PQcmdStatus");
extern fn char *PQoidStatus(PGresult *res) @extern("PQoidStatus");
extern fn Oid	PQoidValue(PGresult *res) @extern("PQoidValue");
extern fn char *PQcmdTuples(PGresult *res) @extern("PQcmdTuples");
extern fn char *PQgetvalue(PGresult *res, int tup_num, int field_num) @extern("PQgetvalue");
extern fn int	PQgetlength(PGresult *res, int tup_num, int field_num) @extern("PQgetlength");
extern fn int	PQgetisnull(PGresult *res, int tup_num, int field_num) @extern("PQgetisnull");
extern fn int	PQnparams(PGresult *res) @extern("PQnparams");
extern fn Oid	PQparamtype(PGresult *res, int param_num) @extern("PQparamtype");

/* Describe prepared statements and portals */
extern fn PGresult *PQdescribePrepared(PGconn *conn, char *stmt) @extern("PQdescribePrepared");
extern fn PGresult *PQdescribePortal(PGconn *conn, char *portal) @extern("PQdescribePortal");
extern fn int	PQsendDescribePrepared(PGconn *conn, char *stmt) @extern("PQsendDescribePrepared");
extern fn int	PQsendDescribePortal(PGconn *conn, char *portal) @extern("PQsendDescribePortal");

/* Delete a PGresult */
extern fn void PQclear(PGresult *res) @extern("PQclear");

/* For freeing other alloc'd results, such as PGnotify structs */
extern fn void PQfreemem(void *ptr) @extern("PQfreemem");

/* Exists for backward compatibility.  bjm 2003-03-24 */
macro PQfreeNotify(ptr) {
    return PQfreemem(ptr);
}

/* Error when no password was given. */
/* Note: depending on this is deprecated; use PQconnectionNeedsPassword(). */
#define PQnoPasswordSupplied	"fe_sendauth: no password supplied\n"

/* Create and manipulate PGresults */
extern fn PGresult *PQmakeEmptyPGresult(PGconn *conn, ExecStatusType status) @extern("PQmakeEmptyPGresult");
extern fn PGresult *PQcopyResult(PGresult *src, int flags) @extern("PQcopyResult");
extern fn int	PQsetResultAttrs(PGresult *res, int numAttributes, PGresAttDesc *attDescs) @extern("PQsetResultAttrs");
extern fn void *PQresultAlloc(PGresult *res, size_t nBytes) @extern("PQresultAlloc");
extern fn size_t PQresultMemorySize(PGresult *res) @extern("PQresultMemorySize");
extern fn int	PQsetvalue(PGresult *res, int tup_num, int field_num, char *value, int len) @extern("PQsetvalue");
